k8s/exec_k8s_job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: twincity-api
spec:
  containers:
    - name: exec-k8s-job
      image: djadeau/exec_k8s_job:latest
