k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: twincity-backend
spec:
  selector:
    app: twincity-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
