k8s/twincity_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twincity-ingress
  namespace: twincity
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: twincity.lb1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twincity-backend
            port:
              number: 80
